@@ -6,8 +6,10 @@ import io.stargate.sgv2.jsonapi.exception.ErrorCodeV1;
 import io.stargate.sgv2.jsonapi.service.projection.IndexingProjector;
 import io.stargate.sgv2.jsonapi.service.schema.collections.CollectionSchemaObject;
 import jakarta.validation.Valid;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * Internal model for the sort clause that can be used in the commands.
@@ -15,17 +17,45 @@ import java.util.List;
  * @param sortExpressions Ordered list of sort expressions.
  */
 public record SortClause(@Valid List<SortExpression> sortExpressions) {
+  public SortClause {
+    sortExpressions = Objects.requireNonNull(sortExpressions, "sortExpressions cannot be null");
+  }
+
+  /**
+   * Factory method to create a single-expression immutable {@link SortClause}: to be used for most
+   * cases of "specialized" sort clauses, such as lexical or vector sorts.
+   *
+   * @param sortExpression Sort expression to use in the clause, must not be null.
+   */
+  public static SortClause immutable(SortExpression sortExpression) {
+    Objects.requireNonNull(sortExpression, "sortExpression cannot be null");
+    return new SortClause(Collections.singletonList(sortExpression));
+  }
+
+  /**
+   * Specialized factory method to create a single-expression {@link SortClause} that is
+   * <b>mutable</b>: this is unfortunately needed to support the legacy Vectorize handling.
+   *
+   * @param sortExpression Sort expression to use in the clause, must not be null.
+   */
+  public static SortClause mutable(SortExpression sortExpression) {
+    Objects.requireNonNull(sortExpression, "sortExpression cannot be null");
+    List<SortExpression> sortExpressions = new ArrayList<>(1);
+    sortExpressions.add(sortExpression);
+    return new SortClause(sortExpressions);
+  }
+
   public static SortClause empty() {
     return new SortClause(Collections.emptyList());
   }
 
   public boolean isEmpty() {
-    return sortExpressions == null || sortExpressions.isEmpty();
+    return sortExpressions.isEmpty();
   }
 
   /** Get the sort expressions that are trying to vector sort columns on a table */
   public List<SortExpression> tableVectorSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream()
             .filter(
@@ -36,7 +66,7 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) {
 
   /** Get the sort expressions that are not trying to vector sort columns on a table */
   public List<SortExpression> nonTableVectorSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream()
             .filter(
@@ -46,13 +76,13 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) {
   }
 
   public List<CqlIdentifier> sortColumnIdentifiers() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream().map(SortExpression::pathAsCqlIdentifier).toList();
   }
 
   public List<SortExpression> tableVectorizeSorts() {
-    return sortExpressions == null
+    return sortExpressions.isEmpty()
         ? List.of()
         : sortExpressions.stream().filter(SortExpression::isTableVectorizeSort).toList();
   }
@@ -68,37 +98,25 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) {
   }
 
   public boolean hasVsearchClause() {
-    return sortExpressions != null
-        && !sortExpressions.isEmpty()
-        && sortExpressions.get(0).path().equals(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD);
+    return !sortExpressions.isEmpty() && sortExpressions.getFirst().hasVector();
   }
 
   public boolean hasVectorizeSearchClause() {
-    return sortExpressions != null
-        && !sortExpressions.isEmpty()
-        && sortExpressions
-            .get(0)
-            .path()
-            .equals(DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD);
+    return !sortExpressions.isEmpty() && sortExpressions.getFirst().hasVectorize();
   }
 
-  public SortExpression bm25SearchExpression() {
-    if ((sortExpressions == null) || sortExpressions.size() != 1) {
+  public SortExpression lexicalSortExpression() {
+    if (sortExpressions.size() != 1) {
       return null;
     }
-    SortExpression expr = sortExpressions.get(0);
-    return expr.isBM25Search() ? expr : null;
+    SortExpression expr = sortExpressions.getFirst();
+    return expr.isLexicalSort() ? expr : null;
   }
 
   public void validate(CollectionSchemaObject collection) {
-    // First things first: BM25 search may or may not be available
-    SortExpression bm25Expr = bm25SearchExpression();
-    if (bm25Expr != null) {
-      if (!collection.lexicalConfig().enabled()) {
-        throw ErrorCodeV1.LEXICAL_NOT_ENABLED_FOR_COLLECTION.toApiException(
-            "Lexical search is not enabled for collection '%s'", collection.name());
-      }
-      // But it must be the only sort expression so we can stop here
+    // First things first: Lexical/BM25 search uses its own index; also the only expression
+    // (validated during SortClauseBuilder.buildAndValidate())
+    if (lexicalSortExpression() != null) {
       return;
     }
 
@@ -109,20 +127,21 @@ public record SortClause(@Valid List<SortExpression> sortExpressions) {
     }
     // validate each path in sortExpressions
     for (SortExpression sortExpression : sortExpressions) {
-      if (!indexingProjector.isPathIncluded(sortExpression.path())) {
+      if (!indexingProjector.isPathIncluded(sortExpression.getPath())) {
         throw ErrorCodeV1.UNINDEXED_SORT_PATH.toApiException(
-            "sort path '%s' is not indexed", sortExpression.path());
+            "sort path '%s' is not indexed", sortExpression.getPath());
       }
       // `SortClauseDeserializer` looks for binary value and adds it as SortExpression irrespective
       // of field name to support ANN search for tables. There is no access to SchemaObject in the
       // deserializer, so added a validation to check in case of collection.
 
-      if (!(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD.equals(sortExpression.path())
-              || DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD.equals(sortExpression.path()))
-          && sortExpression.vector() != null) {
+      if (!(DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD.equals(sortExpression.getPath())
+              || DocumentConstants.Fields.VECTOR_EMBEDDING_TEXT_FIELD.equals(
+                  sortExpression.getPath()))
+          && sortExpression.hasVector()) {
         throw ErrorCodeV1.INVALID_SORT_CLAUSE.toApiException(
             "Sorting by embedding vector values for the collection requires `%s` field. Provided field name: `%s`.",
-            DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD, sortExpression.path());
+            DocumentConstants.Fields.VECTOR_EMBEDDING_FIELD, sortExpression.getPath());
       }
     }
   }
